[project]
name = "electrostatic-echo"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Marek Wiewiorski"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "furo (>=2024.8.6,<2025.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "rdkit (>=2025.3.3,<2026.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
